.taskcat/.remote_templates/kqbsspewramkievi.template
Mappings:
  RegionMap:
    us-west-1:
      HVM64: ami-0f8d1bbef118f40b7
    eu-north-1:
      HVM64: ami-0de17bd98529daca0
    us-east-1:
      HVM64: ami-08c381cf6e70cdec0
    ap-northeast-1:
      HVM64: ami-0ec6aee3faffb3cc8
    sa-east-1:
      HVM64: ami-01577732d7058192a
    ap-northeast-2:
      HVM64: ami-0d5f9d5a198a6d126
    ap-southeast-1:
      HVM64: ami-0078d7ac03c0d74fe
    ca-central-1:
      HVM64: ami-0e235ba41c7ef212e
    ap-southeast-2:
      HVM64: ami-03b4c0267901d3dd8
    us-west-2:
      HVM64: ami-02d8e13e786cb117b
    us-east-2:
      HVM64: ami-0ef4bac28de23d41b
    ap-south-1:
      HVM64: ami-02bfb29ef5b7e12ca
    eu-central-1:
      HVM64: ami-044e45f6a4b0c718b
    eu-west-1:
      HVM64: ami-08d28bc23dea521d5
    eu-west-2:
      HVM64: ami-0e27d6df39a9cbf98
    eu-west-3:
      HVM64: ami-02c97e9564918d64e
Parameters:
  amiId:
    Type: String
    Description: 'OPTIONAL: Advanced setting. Leave blank unless advised to assign
      by Cribl Support.'
  vpcId:
    Type: AWS::EC2::VPC::Id
    Description: 'REQUIRED: ID of your existing VPC.'
  AdditionalPolicies:
    Default: arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore,arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
    Type: CommaDelimitedList
    Description: A comma separated list of Policy ARNs to add to the IAM role used
      by Logstream instances
  instanceType:
    Default: c5.2xlarge
    ConstraintDescription: Must contain valid instance type
    Type: String
    Description: EC2 instance type to provision the LogStream instance. If none specified,
      c5.2xlarge will be used.
    AllowedValues:
    - c5.4xlarge
    - c5.2xlarge
    - c5.xlarge
    - c5.large
    - c5d.4xlarge
    - c5d.2xlarge
    - c5d.xlarge
    - c5d.large
    - c5a.4xlarge
    - c5a.2xlarge
    - c5a.xlarge
    - c5a.large
    - c5ad.4xlarge
    - c5ad.2xlarge
    - c5ad.xlarge
    - c5ad.large
  webAccessCidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Type: String
    Description: 'REQUIRED: The CIDR IP range permitted to access the LogStream web
      console. We recommend you set this value to a trusted IP range.'
  subnetId:
    Type: AWS::EC2::Subnet::Id
    Description: 'REQUIRED: ID of one of your existing Subnet IDs. This subnet must
      be in the same VPC as VPC ID above.'
  sshKeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: 'REQUIRED: Name of an existing EC2 key pair.'
  sshAccessCidr:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Type: String
    Description: 'REQUIRED: CIDR IP range permitted to SSH access to the instance.
      We recommend you set this value to a trusted IP range.'
AWSTemplateFormatVersion: '2010-09-09'
Outputs:
  stackName:
    Description: CFN Stack Name
    Value:
      Fn::Sub: ${AWS::StackName}
  logstreamWebAccessCreds:
    Description: Default Web Access Credentials
    Value:
      Fn::Sub: admin / ${ec2SingleInstance}
  logstreamWebUrlPublic:
    Description: Cribl LogStream Web URL (PublicIp)
    Value:
      Fn::Sub: http://${ec2SingleInstance.PublicIp}:9000/login
Rules:
  SubnetsInVPC:
    Assertions:
    - Assert:
        Fn::EachMemberIn:
        - Fn::ValueOfAll:
          - AWS::EC2::Subnet::Id
          - VpcId
        - Fn::RefAll: AWS::EC2::VPC::Id
      AssertDescription: All subnets must in the VPC
Description: Cribl LogStream Free Single Deployment (x86_64)
Conditions:
  amiid:
    Fn::Not:
    - Fn::Equals:
      - Ref: amiId
      - ''
Resources:
  iamDefaultInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path:
        Fn::Sub: /logstream/${AWS::StackName}/
      Roles:
      - Ref: LogstreamRole
  s3DefaultDestinationBucket:
    Type: AWS::S3::Bucket
    Properties:
      PublicAccessBlockConfiguration:
        IgnorePublicAcls: true
        BlockPublicPolicy: true
        BlockPublicAcls: true
        RestrictPublicBuckets: true
      Tags:
      - Value: Cribl LogStream default destination bucket
        Key: Name
  LogstreamRole:
    Type: AWS::IAM::Role
    Properties:
      ManagedPolicyArns:
        Ref: AdditionalPolicies
      Description: Cribl LogStream default IAM role
      Tags:
      - Value: Cribl LogStream  IAM role
        Key: Name
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Action:
          - sts:AssumeRole
          Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
      Policies:
      - PolicyName: S3Destinations
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Action:
            - s3:PutObject
            - s3:GetObject
            - s3:ListBucket
            - s3:GetBucketLocation
            Resource:
            - Fn::Sub: ${s3DefaultDestinationBucket.Arn}
            - Fn::Sub: ${s3DefaultDestinationBucket.Arn}/*
            Effect: Allow
      - PolicyName: S3Sources
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Action:
            - s3:GetObject
            - s3:GetBucketLocation
            Resource: '*'
            Effect: Allow
      - PolicyName: KinesisSources
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Action:
            - kinesis:Get*
            - kinesis:List*
            - kinesis:Describe*
            Resource: '*'
            Effect: Allow
      Path:
        Fn::Sub: /logstream/${AWS::StackName}/
  ec2SingleSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      SecurityGroupIngress:
      - ToPort: 22
        IpProtocol: tcp
        CidrIp:
          Ref: sshAccessCidr
        Description: SSH access to the LogStream instance
        FromPort: 22
      - ToPort: 9000
        IpProtocol: tcp
        CidrIp:
          Ref: webAccessCidr
        Description: UI access to the LogStream instance
        FromPort: 9000
      VpcId:
        Ref: vpcId
      GroupDescription: Cribl LogStream Access
      SecurityGroupEgress:
      - IpProtocol: '-1'
        Description: Egress access
        CidrIp: 0.0.0.0/0
  ec2SingleInstance:
    Type: AWS::EC2::Instance
    Properties:
      UserData:
        Fn::Base64:
          Fn::Sub:
          - "#cloud-config\n\nruncmd: \n  - /usr/local/bin/configure_logstream.sh\
            \ -m single -b ${s3DefaultDestinationBucket}\n  - sleep 10\n  - cloud-init\
            \ query -f \"$(cat /opt/cribl_build/users.json.j2)\" > /opt/cribl/local/cribl/auth/users.json\n\
            \  - chown -R cribl:cribl /opt/cribl\n"
          - s3DefaultDestinationBucket:
              Ref: s3DefaultDestinationBucket
      Tags:
      - Value: Cribl LogStream Single Instance
        Key: Name
      - Value: Machine data analysis
        Key: Purpose
      ImageId:
        Fn::If:
        - amiid
        - Ref: amiId
        - Fn::FindInMap:
          - RegionMap
          - Ref: AWS::Region
          - HVM64
      KeyName:
        Ref: sshKeyPair
      SecurityGroupIds:
      - Ref: ec2SingleSecurityGroup
      SubnetId:
        Ref: subnetId
      IamInstanceProfile:
        Ref: iamDefaultInstanceProfile
      InstanceType:
        Ref: instanceType
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Parameters:
      - sshKeyPair
      - instanceType
      Label:
        default: Instance Configuration
    - Parameters:
      - vpcId
      - subnetId
      - webAccessCidr
      - sshAccessCidr
      Label:
        default: Network Configuration
    - Parameters:
      - AdditionalPolicies
      - amiId
      Label:
        default: Advanced Settings
    ParameterLabels:
      vpcId:
        default: VPC ID
      instanceType:
        default: EC2 Instance Type
      webAccessCidr:
        default: Web Access CIDR
      subnetId:
        default: Subnet ID
      sshKeyPair:
        default: SSH Key Name
      sshAccessCidr:
        default: SSH Access CIDR
